--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-       		<title>Bloc Jams</title>
+       <title>Bloc Jams</title>
+       <meta name="viewport" content="width=device-width, initial-scale=1">:
        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
        <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
@@ -13,6 +14,7 @@
        </nav>
        <section class="hero-content"> <!-- Hero Content -->
        		<h1 class="hero-content">Bloc Jams</h1>                                                                                                                               
+       		<h3>Turn the music up!</h3>
        </section>
        <section class="selling points"> <!-- Selling Points -->
        		<div class="point">
@@ -26,7 +28,7 @@
        			<p class="point-description">No arbitrary limits. No distractions.</p>
        		</div>
        		<div class="point">
-			<span class="ion-phone"></span>	
+			<span class="ion-iphone"></span>	
        			<h5 class="point-title">Mobile enabled</h5>
        			<p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>  
        		</div>
