--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
        <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
        </nav>
        <section class="hero-content"> <!-- Hero Content -->
-       		<h1 class="hero-content">Bloc Jams</h1>                                                                                                                               
-       		<h3>Turn the music up!</h3>
+       		<h1 class="hero-title">Turn the music up!</h1>
        </section>
        <section class="selling-points container"> <!-- Selling Points -->
        		<div class="point column third">
