--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <section class="hero-content"> <!-- Hero Content -->
        		<h1 class="hero-title">Turn the music up!</h1>
        </section>
-       <section class="selling-points container"> <!-- Selling Points -->
+       <section class="selling-points container clearfix"> <!-- Selling Points -->
        		<div class="point column third">
 			<span class="ion-music-note"></span>	
        			<h5 class="point-title">Choose Your Music</h5>
