--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
        		<div class="point column third">
 			<span class="ion-iphone"></span>	
        			<h5 class="point-title">Mobile enabled</h5>
-       			<p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>  
+      			<p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>  
        		</div>
        </section>
+	<script>
+             // our JavaScript will go here
+	
+	alert("Why hello there! I'm a wee bit of JavaScript.");
+	</script>
+
 </body>
 </html>
 
