--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
        			<h5 class="point-title">Mobile enabled</h5>
       			<p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>  
        		</div>
-       </section>
-	<script>
-             // our JavaScript will go here
-	
-	alert("Why hello there! I'm a wee bit of JavaScript.");
-	</script>
-
+        </section>
+	<script src="scripts/landing.js"></script>
 </body>
 </html>
 
